# interactive-ebook-creator

./: README.md  editor.html  index.html
.github/workflows/: ci.yml  release.yml
cad-processor/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
cad-processor/src/: App.jsx  index.css
cad-processor/src-tauri/: Cargo.toml  tauri.conf.json
cad-processor/src-tauri/icons/: icon.icns
cad-processor/src-tauri/src/: factory.rs  main.rs  processor.rs
cad-processor/src-tauri/src/processors/: cleaner.rs  exploder.rs  flattener.rs  merger.rs  mod.rs
cad-processor/src/components/: DropZone.jsx
cad_automator/core_backend/: factory.py  interfaces.py  main.py
cad_automator/core_backend/processors/: cleaner.py  merger.py
cad_automator/rust_core/: Cargo.toml
cad_automator/rust_core/src/: factory.rs  main.rs
cad_automator/rust_core/src/processors/: cleaner.rs  merger.rs
css/: styles.css
js/: editor.js  player.js
src-tauri/: tauri.conf.json
tri-proof-assist/: package.json
tri-proof-assist/src/: App.tsx
tri-proof-assist/src-tauri/: Cargo.toml  tauri.conf.json
tri-proof-assist/src-tauri/src/: main.rs
tri-proof-assist/src/components/Canvas/: Board.tsx
tri-proof-assist/src/components/ProofPanel/: ProofPanel.tsx
ui/: book.json  index.html
ui/js/: editor.js  player.js
